--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <title>Hello</title>
 </head>
 <body>
-<div>
+<div class="container">
   <p>Hello 👋</p>
+  <small><a href="https://github.com/huro3h/our_project" target="_blank">https://github.com/huro3h/our_project</a></small>
 </div>
 </body>
 </html>
